# axyftp

./: .gitignore  Makefile  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  config.h  config.h.in  config.hlp  config.status  configure  configure.ac  configure.in
autom4te.cache/: output.0  output.2  output.3  output.5  requests  traces.0  traces.1  traces.2  traces.4  traces.5  traces.6
doc/: Makefile  Makefile.in
doc/help/: Makefile
dtwidget/: Makefile  config.status  configure  configure.lineno
dtwidget/Dt/: ComboBox.c  DtMsgsP.h  Makefile
dtwidget/autom4te.cache/: output.0  traces.0
dtwidget/cwikla/: Makefile
dtwidget/cwikla-clean/: Makefile
dtwidget/jra/: Makefile
dtwidget/moz/: Makefile
dtwidget/moz-clean/: Makefile
dtwidget/orig/: Makefile
icons/: Makefile  Makefile.in
macro/: Makefile  Makefile.in  axy_lib_xthreads.m4  axy_path_dt.m4  axy_path_motif.m4  axy_path_xmaxy.m4  axy_path_xpm.m4
src/: Makefile  Makefile.in  Makefile.orig  about_dialog.c  arrows.c  axyftp  axyftp.c  axyftp.h  buttonbar.c  buttons.c  dirinfo.c  dirlist.c  dirlist.h  dirname.c  fileinfo.c  ftp.c  ftp.h  ftp_xfer.c  functions.c  little_dialogs.c  main_frame.c  main_frame.h  multi.c  options_advanced.c  options_data.c  options_dialog.c  options_display.c  options_general.c  options_sound.c  panel.c  pixmaps.c  pixmaps.h  progress_dialog.c  prompt_dialogs.c  proto.c  read_init.c  session_advanced.c  session_data.c  session_dialog.c  session_general.c  (+5 more)
src/.deps/: axyftp.Tpo
src/xpms/: Makefile  doc.xpm  doclink.xpm  folder.xpm  link.xpm  up.xpm
xmaxy/: Makefile
xmaxy/XmAxy/: List.c  Makefile  Notebook.c  Util.c  demo.c
xpms/: Makefile  Makefile.in
